--- a/ObEwolucyjne1/ObEwolucyjne1.csproj
+++ b/ObEwolucyjne1/ObEwolucyjne1.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GenetiHelpers.cs" />
+    <Compile Include="GeneticHelpers.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
