halfway, not compiling

--- a/ObEwolucyjne1/ObEwolucyjne1.csproj
+++ b/ObEwolucyjne1/ObEwolucyjne1.csproj
@@ -43,7 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Environment.cs" />
     <Compile Include="GeneticHelpers.cs" />
+    <Compile Include="Individual.cs" />
+    <Compile Include="Population.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
