--- a/AlgorytmEwolucyjny.csproj
+++ b/AlgorytmEwolucyjny.csproj
@@ -46,6 +46,7 @@
     <Compile Include="DailyMarketData.cs" />
     <Compile Include="ILogger.cs" />
     <Compile Include="DirectFileLogger.cs" />
+    <Compile Include="IntArrayExtensions.cs" />
     <Compile Include="MarketFunctions.cs" />
     <Compile Include="ProblemKlienta.cs" />
     <Compile Include="Program.cs" />
