implemented iocfactory, fixed bugs with individual, unnecessary surivive fnction calls, remove some depracated functions,use the fkin linq

--- a/AlgorytmEwolucyjny.csproj
+++ b/AlgorytmEwolucyjny.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ILogger.cs" />
     <Compile Include="DirectFileLogger.cs" />
     <Compile Include="IntArrayExtensions.cs" />
+    <Compile Include="IoCFactory.cs" />
     <Compile Include="MarketFunctions.cs" />
     <Compile Include="ProblemKlienta.cs" />
     <Compile Include="Program.cs" />
