--- a/App.config
+++ b/App.config
@@ -8,6 +8,6 @@
     <add key="pathToInfoFile" value="C:\REPOS\mgr\bin\Debug\log.txt" />
     <add key="pathToExceptionFile" value="C:\REPOS\mgr\bin\Debug\logException.txt" />
     <add key="pathToMarketDataFile" value="C:\REPOS\mgr\kgh_d.csv" />
-    <add key="pathToTestMarketDataFile" value="C:\REPOS\mgr\kgh_d.csv" />
+    <add key="pathToTestMarketDataFile" value="C:\REPOS\mgr\kgh_dTEST.csv" />
   </appSettings>
 </configuration>
