change working directory, update git ignore, add automatic saving results, json serialization, cleanup to separated classes

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,10 @@
 *.exe
 *.cache
 *.pdb
-obj/Debug/*.cs
-obj/Release/*.cs
+obj/Debug
+obj/Release
+bin/Debug
+bin/Release
 ParserLoga/obj/
 ParserLoga/bin/
+packages
