--- a/App.config
+++ b/App.config
@@ -4,10 +4,22 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
   <appSettings>
+    <!-- Unity Container-->
     <add key="ILoggerInstance" value="DirectFileLogger" />
-    <add key="pathToInfoFile" value="C:\REPOS\mgr\bin\Debug\log.txt" />
-    <add key="pathToExceptionFile" value="C:\REPOS\mgr\bin\Debug\logException.txt" />
-    <add key="pathToMarketDataFile" value="C:\REPOS\mgr\kgh_d.csv" />
-    <add key="pathToTestMarketDataFile" value="C:\REPOS\mgr\kgh_dTEST.csv" />
+    <!-- File paths-->
+    <add key="pathToInfoFile" value="C:\REPOS\mgr\AppContents\log.txt" />
+    <add key="pathToExceptionFile" value="C:\REPOS\mgr\AppContents\logException.txt" />
+    <add key="pathToMarketDataFile" value="C:\REPOS\mgr\AppContents\kgh_d.csv" />
+    <add key="pathToTestMarketDataFile" value="C:\REPOS\mgr\AppContents\kgh_dTEST.csv" />
+    <add key="pathToOutputCsvFile" value="C:\REPOS\mgr\AppContents\heavensOUT.csv" />
+    <!-- Genetic environement config -->
+    <add key="StopDate" value="20/12/2019 23:39:30" />
+    <add key="MinutesLimit" value="5" />
+    <add key="MUTATIONPROBABILITY" value="0.4" />
+    <add key="MUTATIONRETRIALS" value="8" />
+    <add key="SelectionMethod" value="Tournament" />
+    <add key="CrossoverMethod" value="Basic" />
+    <add key="ScoreModifier" value="1" />
+    <add key="StartingIndividual" value="C:\REPOS\mgr\AppContents\bestIndividual.json" />
   </appSettings>
 </configuration>
