first actually promising individual running for next 3h to generate .csv data. branching for iteration and continuing with complex implementation

--- a/App.config
+++ b/App.config
@@ -7,13 +7,13 @@
     <!-- Unity Container-->
     <add key="ILoggerInstance" value="DirectFileLogger" />
     <!-- File paths-->
-    <add key="pathToInfoFile" value="C:\REPOS\mgr\AppContents\log.txt" />
-    <add key="pathToExceptionFile" value="C:\REPOS\mgr\AppContents\logException.txt" />
+    <add key="pathToInfoFile" value="C:\REPOS\mgr\AppContents\logDebug.txt" />
+    <add key="pathToExceptionFile" value="C:\REPOS\mgr\AppContents\logDebugException.txt" />
     <add key="pathToMarketDataFile" value="C:\REPOS\mgr\AppContents\kgh_d.csv" />
     <add key="pathToTestMarketDataFile" value="C:\REPOS\mgr\AppContents\kgh_dTEST.csv" />
     <add key="pathToOutputCsvFile" value="C:\REPOS\mgr\AppContents\heavensOUT.csv" />
     <!-- Genetic environement config -->
-    <add key="StopDate" value="01/12/2019 04:15:00" />
+    <add key="StopDate" value="01/12/2019 15:30:00" />
     <add key="MinutesLimit" value="10000" />
     <add key="MUTATIONPROBABILITY" value="0.4" />
     <add key="MUTATIONRETRIALS" value="8" />
