--- a/App.config
+++ b/App.config
@@ -7,19 +7,20 @@
     <!-- Unity Container-->
     <add key="ILoggerInstance" value="DirectFileLogger" />
     <!-- File paths-->
-    <add key="pathToInfoFile" value="C:\REPOS\mgr\AppContents\logDebug.txt" />
-    <add key="pathToExceptionFile" value="C:\REPOS\mgr\AppContents\logDebugException.txt" />
-    <add key="pathToMarketDataFile" value="C:\REPOS\mgr\AppContents\kgh_d.csv" />
-    <add key="pathToTestMarketDataFile" value="C:\REPOS\mgr\AppContents\kgh_dTEST.csv" />
-    <add key="pathToOutputCsvFile" value="C:\REPOS\mgr\AppContents\heavensOUT.csv" />
+    <add key="workingDirectory" value="C:\REPOS\mgr\AppContents" />
+    <add key="pathToInfoFile" value="logDebug.txt" />
+    <add key="pathToExceptionFile" value="logDebugException.txt" />
+    <add key="pathToMarketDataFile" value="kgh_d.csv" />
+    <add key="pathToTestMarketDataFile" value="kgh_dTEST.csv" />
+    <add key="pathToOutputCsvFile" value="heavensOUT.csv" />
     <!-- Genetic environement config -->
-    <add key="StopDate" value="01/12/2019 15:30:00" />
-    <add key="MinutesLimit" value="10000" />
+    <add key="StopDate" value="01/12/2019 19:30:00" />
+    <add key="MinutesLimit" value="1" />
     <add key="MUTATIONPROBABILITY" value="0.4" />
     <add key="MUTATIONRETRIALS" value="8" />
     <add key="SelectionMethod" value="Tournament" />
     <add key="CrossoverMethod" value="Basic" />
     <add key="ScoreModifier" value="1" />
-    <add key="StartingIndividual" value="C:\REPOS\mgr\AppContents\bestIndividual.json" />
+    <add key="StartingIndividual" value="bestIndividual.json" />
   </appSettings>
 </configuration>
