--- a/App.config
+++ b/App.config
@@ -14,11 +14,11 @@
     <add key="pathToTestMarketDataFile" value="kgh_dTEST.csv" />
     <add key="pathToOutputCsvFile" value="heavensOUT.csv" />
     <!-- Genetic environement config -->
-    <add key="StopDate" value="01/12/2019 19:30:00" />
-    <add key="MinutesLimit" value="1" />
+    <add key="StopDate" value="17/12/2019 23:35:00" />
+    <add key="MinutesLimit" value="60" />
     <add key="MUTATIONPROBABILITY" value="0.4" />
-    <add key="MUTATIONRETRIALS" value="8" />
-    <add key="SelectionMethod" value="Tournament" />
+    <add key="MUTATIONRETRIALS" value="40" />
+    <add key="SelectionMethod" value="RankedRoulette" />
     <add key="CrossoverMethod" value="Basic" />
     <add key="ScoreModifier" value="1" />
     <add key="StartingIndividual" value="bestIndividual.json" />
