--- a/Neurox.Web/Neurox.Web.csproj
+++ b/Neurox.Web/Neurox.Web.csproj
@@ -12,4 +12,8 @@
     <Folder Include="Helpers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.9" />
+  </ItemGroup>
+
 </Project>
